# samplore

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  PAINTING_ANALYSIS.md  README.md  SCROLLING_PERFORMANCE_ANALYSIS.md  SamplifyPlus.jucer  Samplore.jucer  history.txt  plan.txt  todo.txt
.claude/: settings.local.json
JuceLibraryCode/: AppConfig.h  BinaryData.cpp  BinaryData.h  JuceHeader.h
Source/: ActiveTagsBar.cpp  ActiveTagsBar.h  AudioPlayer.cpp  AudioPlayer.h  CueManager.cpp  CueManager.h  DirectoryExplorer.cpp  DirectoryExplorer.h  DirectoryExplorerTreeViewItem.cpp  DirectoryExplorerTreeViewItem.h  FilterExplorer.cpp  FilterExplorer.h  Icons.cpp  Icons.h  ImportWizard.cpp  ImportWizard.h  InfoWindow.cpp  InfoWindow.h  InputContext.cpp  InputContext.h  KeyBindingEditor.cpp  KeyBindingEditor.h  KeyBindingManager.cpp  KeyBindingManager.h  Main.cpp  PERFORMANCE_PROFILING.md  PerformanceProfiler.h  PreferenceWindow.cpp  PreferenceWindow.h  Sample.cpp  Sample.h  SampleAudioThumbnail.cpp  SampleAudioThumbnail.h  SampleContainer.cpp  SampleContainer.h  SampleDirectory.cpp  SampleDirectory.h  SampleExplorer.cpp  SampleExplorer.h  SampleLibrary.cpp  (+43 more)
Source/Animation/: AnimationManager.h
Source/Tests/: BasicThemeTest.cpp  CMakeLists.txt  Makefile  SampleLibraryTests.cpp  SampleTests.cpp  TestHelpers.h  ThemeManagerTests.cpp  main_test.cpp
Source/UI/: CueBindingsWindow.cpp  CueBindingsWindow.h  IOverlayPanelContent.h  IconLibrary.cpp  IconLibrary.h  KeyCaptureOverlay.cpp  KeyCaptureOverlay.h  LeftPanelTabs.cpp  LeftPanelTabs.h  OverlayPanel.cpp  OverlayPanel.h
docs/: README.md  index.html
scripts/: build.py  build.sh  clean.py  clean.sh  configure.py  cross-compile-windows.py  debug.py  package_release.py  run.py  run.sh  run_tests.py  setup.py  setup.sh  setup_vscode.py
site/: DEPLOYMENT.md  README.md  index.html  script.js  style.css
